<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OverviewFragment">

    <TextView
            android:text="@string/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtTopicName" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:textSize="18sp"/>
    <TextView
            android:text="@string/txtDes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtDescription" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtTopicName" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <TextView
            android:text="@string/txtQNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtQNum" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtDescription" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <Button
            android:text="@string/btnBegin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnBegin" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/txtQNum" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
</android.support.constraint.ConstraintLayout>