<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/txtYourAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtYourAnswer" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/txtCorrectAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtCorrectAnswer" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtYourAnswer" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/txtSocre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtScore" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtCorrectAnswer" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/btnNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnNext" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/txtScore" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintHorizontal_bias="0.06"/>
</android.support.constraint.ConstraintLayout>