<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">


    <TextView
            android:text="@string/txtName"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:id="@+id/txtQTopic"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/txtQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtQ"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtQTopic" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/answers"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtQ" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintHorizontal_bias="0.0">
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/an1" android:layout_weight="1"/>
        <RadioButton
                android:text="RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/an2" android:layout_weight="1"/>
        <RadioButton
                android:text="RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/an3" android:layout_weight="1"/>
        <RadioButton
                android:text="RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/an4" android:layout_weight="1"/>
    </RadioGroup>
    <Button
            android:text="@string/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnSubmit" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/answers" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0"/>
</android.support.constraint.ConstraintLayout>